--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,37 @@ updates:
       directory: "/"
       schedule:
           interval: "weekly"
-      open-pull-requests-limit: 5
+          day: "monday"
+          time: "09:00"
+      open-pull-requests-limit: 10
+      reviewers:
+        - "Fractal5-X"
+      assignees:
+        - "Fractal5-X"
+      commit-message:
+        prefix: "deps"
+        prefix-development: "deps-dev"
+        include: "scope"
+      labels:
+        - "dependencies"
+        - "enterprise"
+      groups:
+        python-packages:
+          patterns:
+            - "*"
     - package-ecosystem: "github-actions"
       directory: "/"
       schedule:
           interval: "weekly"
+          day: "monday"
+          time: "09:00"
+      open-pull-requests-limit: 5
+      reviewers:
+        - "Fractal5-X"
+      assignees:
+        - "Fractal5-X"
+      commit-message:
+        prefix: "ci"
+      labels:
+        - "github-actions"
+        - "enterprise"
